--- a/ucf-apps/mdfrefer-demo/src/app.less
+++ b/ucf-apps/mdfrefer-demo/src/app.less
@@ -5,6 +5,11 @@
   padding: 5px 10px;
   background-color: #f5f5f5;
 }
+span.error{
+    display: inline-block;
+    padding-top: 10px;
+    color:#f53c32;
+}
 .demo{
     padding: 10px;
 
