修改样式的引入方式

--- a/ucf-apps/mdfrefer-demo/src/app.less
+++ b/ucf-apps/mdfrefer-demo/src/app.less
@@ -1,5 +1,12 @@
-@import '~static/mdf-refer/index.css';//就是mdf-refer的indexcss样式
+// @import '~static/mdf-refer/index.css';//就是mdf-refer的indexcss样式
 
+.fakeinput{
+    width: calc(100% - 80px);
+    height: 30px;
+    vertical-align: top;
+    position: absolute;
+    z-index:2;
+}
 #app h2{
   font-size: 14px;
   padding: 5px 10px;
